<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:ignore="MissingConstraints"
    tools:context=".MainActivity"
    >

    <LinearLayout

        android:id="@+id/linearLayoutMain"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        tools:ignore="MissingConstraints"
        tools:context=".MainActivity">


        <android.support.design.widget.TextInputLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox">

            <android.support.design.widget.TextInputEditText
                android:id="@+id/etnombre"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/nombre"
                android:textColor="@color/secondary_text"
                android:textSize="@dimen/tamañoTexto"
                android:textStyle="bold"
                android:text=""/>

        </android.support.design.widget.TextInputLayout>




        <android.support.design.widget.TextInputLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox">

            <android.support.design.widget.TextInputEditText
                android:id="@+id/etfechaNacimientoPicker"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                app:helperTextEnabled="true"
                app:helperText="@string/txtayudatocar2veces"
                android:hint="@string/fechaNacimiento"
                android:textColor="@color/secondary_text"
                android:textSize="@dimen/tamañoTexto"
                android:textStyle="bold"

                />

        </android.support.design.widget.TextInputLayout>

        <android.support.design.widget.TextInputLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox">

            <android.support.design.widget.TextInputEditText
                android:id="@+id/ettelefono"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/telefono"
                android:textColor="@color/secondary_text"
                android:textSize="@dimen/tamañoTexto"
                android:textStyle="bold" />
        </android.support.design.widget.TextInputLayout>

        <android.support.design.widget.TextInputLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox">

            <android.support.design.widget.TextInputEditText
                android:id="@+id/etemail"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/email"
                android:textColor="@color/secondary_text"
                android:textSize="@dimen/tamañoTexto"
                android:textStyle="bold" />
        </android.support.design.widget.TextInputLayout>

        <android.support.design.widget.TextInputLayout
            android:id="@+id/textInputLayout"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox">

            <android.support.design.widget.TextInputEditText
                android:id="@+id/etdescripcionContacto"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/descripcionContacto"
                android:textColor="@color/secondary_text"
                android:textSize="@dimen/tamañoTexto"
                android:textStyle="bold"
                android:text=""/>
            </android.support.design.widget.TextInputLayout>


        <TextView
            android:id="@+id/textView"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text=""
            tools:layout_editor_absoluteX="165dp"
            tools:layout_editor_absoluteY="375dp" />
    </LinearLayout>

    <Button
        android:id="@+id/botonSalvarDatosUsuario"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/botonSalvaDatosUsuario"
        android:textSize="@dimen/tamañoTxtBtn"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/linearLayoutMain"
        android:clickable="true"
        android:focusable="true" />

</android.support.constraint.ConstraintLayout>